Minorbugfixes
